Version: 0.2.9
Date: 2025-09-04
  Changes:
    - Removed surface conditions from asteroid collectors
    - Add new technology for repairing ground platform
    - Make timer on aquilo longer
    - Make it that if you hop between only 2 planets it will get harder
    - You can now disable next planet sound in settings
    - Remove warptorio enemies (I need to remake them)
---------------------------------------------------------------------------------------------------
Version: 0.2.8
Date: 2025-08-16
  Changes:
    - Fixed warp chest. Now you can't use multiple chests
    - Completely re-work aditional planet variants. It should be much easier now to make new ones
    - Small improvements to warp train
    - Added translation text for warp platform belt
---------------------------------------------------------------------------------------------------
Version: 0.2.7
Date: 2025-07-31
  Changes:
    - Change flamthrower ammo to light oil (Recipe request)
---------------------------------------------------------------------------------------------------
Version: 0.2.6
Date: 2025-07-28
  Changes:
    - New warp GUI
---------------------------------------------------------------------------------------------------
Version: 0.2.5
Date: 2025-07-23
  Changes:
    - Added new research to warp trains between ground and factory floor
    - Change requirements for bio-labs (they have to be on ground floor)
    - Fix some spelling issues
    - Added vote to warp in multiplayer
    - Remove debug texts
---------------------------------------------------------------------------------------------------
Version: 0.2.4
Date: 2025-07-23
  Changes:
    - Fix multiplayer spawning when factory floor is at lvl 0
---------------------------------------------------------------------------------------------------
Version: 0.2.3
Date: 2025-07-23
  Changes:
    - Fixed crash with garden floor upgrade
    -  Fix text in settings