@@ -117,3 +117,4 @@ warptorio_size-difficulty=Warp platform size dificulty
 warptorio_factory-shape=Factory floor shape
 warptorio_players=Ratio of online players to start warp process
 warptorio_next-planet-sound=Sound ping for next planet
+warptorio_reset-recipe=Reset surface specific recipes on warp
